/* Han character */ ids <型#2374836>

--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -1,12 +1,13 @@
 ==Translingual==
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=1210<sub>4</sub>|canj=一弓土 (MNG)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=1210<sub>4</sub>|canj=一弓土 (MNG)|ids=⿱[[刑]][[土]]}}
 # [[pattern]], [[model]], [[type]]
 # [[law]]
 # [[mold]]
 ====References====
 {{Han ref|kx=0227.280|dkj=05030|dj=0463.180|hdz=10436.110|uh=578B|ud=22411|bh=ABAC|bd=43948}}
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=[[ying4]]}}
