--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -67,6 +67,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 *Italian: [[bello]]
 *Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
+*{{ku}}: {{KUchar|[[جوان]]}}, {{KUchar|[[ئێسک سووک]]}}
 *Latin: [[pulcher]], [[formosus]] {{m}}, [[bellus]] {{m}}
 *Old Norse: [[fagr]]
 *Persian: {{FAchar|[[زیبا]]}} (ziba)
@@ -92,6 +93,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *Hebrew: [[נאה]] (na'e)
 {{trans-mid}}
 *Italian: [[bel]] (''before "tempo"''); [[bello]] (''after "tempo"'')
+*{{ku}}: {{KUchar|[[خۆش]]}}
 *[[Tamil]]: [[அழகிய]] [azhagiya]
 *[[Telugu]]: [[ఆహ్లాదకరమైన]]
 {{trans-bottom}}
