--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -18,31 +18,35 @@
 #(''informal'') An [[attempt]].
 #:''I'll give this [[thankless]] task a '''stab'''.''
 # [[Criticism]].
-
+[[Category:English concrete nouns]]
 ====Derived terms====
 *[[have a stab at]]
-*[[stabber]]
 *[[stabbing]]<!--adjective, noun-->
 *[[stab vest]]
 
 ====Translations====
-'''act of stabbing'''
-{{top}}
-{{mid}}
+{{trans-top|Act of stabbing}}
+{{trans-mid}}
 *Russian: [[удар]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
-'''wound made by stabbing'''
-{{top}}
-{{mid}}
+{{trans-top|Wound made by stabbing}}
+{{trans-mid}}
 *Russian: [[колотая рана]] {{f}}
-{{bottom}}
+{{trans-bottom}}
 
-'''attempt'''
-{{top}}
-{{mid}}
+{{trans-top|Pain inflicted on a person's feelings}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|Attempt}}
+{{trans-mid}}
 * Russian: [[попытка]] {{f}}
-{{bottom}}
+{{trans-bottom}}
+
+{{trans-top|Criticism}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Verb===
 {{en-verb|stab|b|ed}}
@@ -52,33 +56,35 @@
 #{{intransitive}} To aim a [[blow]] with a weapon or a [[finger]].
 #{{intransitive}} To cause a [[sharp]], painful [[sensation]].
 
+====Derived terms====
+*[[stabber]] ''noun''
+
 ====Translations====
-'''pierce or wound with pointed tool or weapon'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|To pierce or wound with pointed tool or weapon}}
+*Finnish: [[puukottaa]]
+{{trans-mid}}
+{{trans-bottom}}
 
-'''aim a blow with a weapon or a finger (at someone or something)'''
-<!--this is the TRANSITIVE sense-->
-{{top}}
-{{mid}}
-{{bottom}}
-
-'''aim a blow with a weapon or a finger'''
+{{trans-top|To aim a blow with a weapon or a finger (at someone or something)}}
+{{trans-mid}}
+{{trans-bottom}}
 <!--this is the INTRANSITIVE sense-->
-{{top}}
-{{mid}}
-{{bottom}}
 
-'''cause a sharp painful sensation'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|To aim a blow with a weapon or a finger}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|To cause a sharp painful sensation}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Anagrams===
 *[[bast]]
 *[[bat]]s
 *[[tab]]s
+
+[[Category:English intransitive verbs]]
+[[Category:English transitive verbs]]
 
 ----
 
@@ -89,6 +95,10 @@
 
 #[[staff]]
 
+[[Category:Danish nouns]]
+
+----
+
 ==Swedish==
 
 ===Noun===
@@ -97,11 +107,6 @@
 #[[staff]]
 
 [[Category:Swedish nouns]]
-[[Category:Danish nouns]]
-[[Category:English nouns]]
-[[Category:English concrete nouns]]
-[[Category:English intransitive verbs]]
-[[Category:English transitive verbs]]
 
 [[es:stab]]
 [[fr:stab]]
