--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -9,9 +9,12 @@
 
 ===Proper noun===
 [[Category:English proper nouns]]
-'''Germany'''
+'''Germany''' (''[[countable]] and [[uncountable]]; plural'' '''Germanies''')
+{{en-noun|pl=Germanies}}
 
-# Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
+# (''uncountable'') Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
+# (''countable''; hist. 1949-1990) Either of the German states, FRG and GDR. ''The two Germanies exchanged permanent representatives in 1974.''
+# (''countable''; hist. pre-1871) Any of the German states. ''Melton’s useful new book traces the explosion of public institutions in eighteenth-century England, France and the Germanies.''
 
 ====Translations====
 {{trans-top|Germany}}
