--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -86,6 +86,7 @@
 
 [[Category:Countries]]
 
+[[ar:United States of America]]
 [[zh-min-nan:United States of America]]
 [[el:United States of America]]
 [[fr:United States of America]]
