--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -4,7 +4,7 @@
 From [[日]] ‘sun’ + [[月]] ‘moon’.
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日月 (AB)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日月 (AB)|ids=⿰[[日]][[月]]}}
 # [[bright]], [[light]], [[brilliant]]
 # [[clear]]
 
@@ -12,6 +12,7 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 {{Han ref|kx=0491.120|dkj=13805|dj=0852.180|hdz=21491.080|uh=660E|ud=26126|bh=A9FA|bd=43514}}
 
 ----
+
 ==Cantonese==
 
 ===Hanzi===
