--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -15,21 +15,20 @@
 # A negative consequence or loss that occurs or is required to occur.
 
 ====Translations====
-;Amount of money, time, etc. (1)
-{{top}}
+{{trans-top|Amount of money, time, etc. (1)}}
 *Finnish: [[hinta]], [[kustannus]]
 *German: [[Kosten]] {{f}} ''plural''
-{{mid}}
+{{tran-mid}}
 *Italian: [[costo]] {{m}}, [[spesa]] {{f}}
+*Kurdish: {{KUchar|[[به‌ها]]}}
 *Portuguese: [[custo]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
-;A negative consequence or loss (2)
-{{top}}
+{{trans-top|A negative consequence or loss (2)}}
 *Finnish: [[hinta]]
-{{mid}}
+{{trans-mid}}
 *German: [[Verlust]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
 =====Translations to be categorized=====
 {{checktrans}}
