--- a/en/偲/偲.11138.wikitext
+++ b/en/偲/偲.11138.wikitext
@@ -1,11 +1,12 @@
 ==Translingual==
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2623<sub>0</sub>|canj=人田心 (OWP)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2623<sub>0</sub>|canj=人田心 (OWP)|ids=⿰[[亻]][[思]]}}
 # talented
 # urgent
 ====References====
 {{Han ref|kx=0111.320|dkj=00895|dj=0238.050|hdz=10191.040|uh=5072|ud=20594|bh=D454|bd=54356}}
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=si1}}
