--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -2,12 +2,13 @@
 
 ==Translingual==
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=8033<sub>2</sub>|canj=人一月心 (OMBP)}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=8033<sub>2</sub>|canj=人一月心 (OMBP)|ids=⿱[[俞]][[心]]}}
 # [[more]] and more, [[even more]]
 ====References====
 {{Han ref|kx=0394.030|dkj=10904|dj=0730.140|hdz=42322.150|uh=6108|ud=24840|bh=B755|bd=46933}}
 
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yu6}}
