--- a/en/愉/愉.15645.wikitext
+++ b/en/愉/愉.15645.wikitext
@@ -1,11 +1,12 @@
 ==Translingual==
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9802<sub>1</sub>|canj=心人一弓 (POMN)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9802<sub>1</sub>|canj=心人一弓 (POMN)|ids=⿰[[忄]][[俞]]}}
 # [[pleasant]], [[delightful]]
 # [[please]]
 ====References====
 {{Han ref|kx=0394.040|dkj=10905|dj=0730.150|hdz=42330.010|uh=6109|ud=24841|bh=B472|bd=46194}}
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yu4}}
