-{{top}} +{{trans-top|of or relating to port, the lefthand side of a vessel}}, -{{top}} +{{trans-top|opening in the side of a ship}}, -{{top}} +{{trans-top|opening where a connection is made}}, -{{top}} +{{trans-top|computing: logical or physical con <port#2384293>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -100,15 +100,14 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 *[[starboard]]
 
 =====Translations=====
-'''of or relating to port, the lefthand side of a vessel'''
-{{top}}
+{{trans-top|of or relating to port, the lefthand side of a vessel}}
 *Dutch: [[bakboord-]]
 *French: du [[bâbord]]
 *Greek: [[αριστερό]] (aristeró) {{n}}
-{{mid}}
+{{trans-mid}}
 *Portuguese: [[portuário]]
 *Swedish: [[babord]], [[babord]]-
-{{bottom}}
+{{trans-bottom}}
 
 ===Etymology 2===
 From Latin [[porta]] ‘passage, gate’, reinforced in Middle English from Old French [[porte]].
@@ -127,26 +126,23 @@ From Latin [[porta]] ‘passage, gate’, reinforced in Middle English from Old 
 '''entryway, portal'''<br>
 :''See'' '''[[portal]]'''
 
-'''opening in the side of a ship'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|opening in the side of a ship}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''opening where a connection is made'''
-{{top}}
+{{trans-top|opening where a connection is made}}
 *Finnish: [[liitin]], [[portti]] (''computers'')
-{{mid}}
+{{trans-mid}}
 *Swedish: [[port#Swedish|port]] {{c}}
-{{bottom}}
+{{trans-bottom}}
 
-'''computing: logical or physical construct in and from which data are transferred'''
-{{top}}
+{{trans-top|computing: logical or physical construct in and from which data are transferred}}
 *Estonian: port
 *Finnish: [[portti]]
 *Greek: [[θύρα]] {{f}}, [[σύνδεση]] {{f}}
-{{mid}}
+{{trans-mid}}
 *Swedish: [[port#Swedish|port]] {{c}}
-{{bottom}}
+{{trans-bottom}}
 
 ===Etymology 3===
 Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from where the wines were shipped.
@@ -160,20 +156,19 @@ Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from where the wines were
 *(''type of fortified wine traditionally made in Portugal''): [[porto]]<!--does this exist?-->, [[port wine]]
 
 =====Translations=====
-'''type of fortified wine traditionally made in Portugal'''
-{{top}}
+{{trans-top|type of fortified wine traditionally made in Portugal}}
 *Dutch: [[porto]], [[port]] {{m}}
 *Estonian: [[portvein]]
 *Finnish: [[portviini]]
 *French: [[vin de Porto]] {{m}}
 *German: [[Portwein]] {{m}}
 *Greek: [[πορτό]] {{n}}, [[οίνος Πορτογαλίας]] {{m}}
-{{mid}}
+{{trans-mid}}
 *Italian: [[porto]] {{m}}
 *Portuguese: [[vinho do Porto]] {{m}}
 *Spanish: [[vino de Oporto]] {{m}}
 *Swedish: [[portvin]] {{n}}
-{{bottom}}
+{{trans-bottom}}
 
 ===Etymology 4===
 Abbreviation of [[portmanteau]].
@@ -195,25 +190,22 @@ From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun
 # {{computing}} To adapt a program so that it works on a different platform.
 
 =====Translations=====
-'''Military use'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|Military use}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''to transfer from one state to another'''
-{{top}}
+{{trans-top|to transfer from one state to another}}
 *Dutch: [[overdragen]]
 *Finnish: [[siirtää]] (1), [[kantaa]] (2)
 *French: [[porter]]
-{{mid}}
+{{trans-mid}}
 *Portuguese: [[portar]]
-{{bottom}}
+{{trans-bottom}}
 
-'''computing: to adapt a program so that it works on a different platform'''
-{{top}}
-{{mid}}
+{{trans-top|computing: to adapt a program so that it works on a different platform}}
+{{trans-mid}}
 *Swedish: [[portera]], [[porta]]
-{{bottom}}
+{{trans-bottom}}
 
 =====Derived terms=====
 *[[porter]]
@@ -226,22 +218,19 @@ From Old (and modern) French [[porter]] ''(verb)'', [[port#French|port]] ''(noun
 # {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
 
 =====Translations=====
-'''one’s bearing'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|one’s bearing}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''something used to carry'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|something used to carry}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''computing: act of adapting a program so that it works on a different platform'''
-{{top}}
+{{trans-top|computing: act of adapting a program so that it works on a different platform}}
 *Finnish: [[sovitus]], [[sovittaminen]], [[porttaaminen]] (''informal''), [[porttaus]] (''informal'')
-{{mid}}
+{{trans-mid}}
 *Swedish: [[portering]] {{c}}, [[portning]] {{c}}
-{{bottom}}
+{{trans-bottom}}
 
 ===See also===
 *[[w:port|Wikipedia article on ports (the places where ships dock)]]
