--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -23,7 +23,7 @@
 {{top}}
 *Arabic:ستارة [[setarah]]
 *CJKV Characters: [[幕]]
-*Finnish: [[verho]]
+*Finnish: [[verho]], [[esirippu]]
 *French: [[rideau]] {{m}}
 *German: [[Vorhang]] {{m}}
 *Indonesian: [[serambi]], [[korden]], [[layar]]
