--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -29,7 +29,9 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 #:''The jury finds for the defendant''
 
 ====Derived terms====
+''See also'' '''[[finding]]''' ''and'' '''[[found]]'''
 *[[find fault]]
+*[[find one's feet]]
 *[[find out]]
 
 ====Translations====
