--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -45,7 +45,7 @@
 *:Roman: [[kornjača#Serbian|kornjača]] {{f}}
 *Slovene: [[kopenska želva]] {{f}}
 *Somali: [[diin]]
-*Spanish: [[tortuga terrestre]] {{f}}, [[morrocoy]] {{m}} (''Venezuela'')
+*Spanish: [[tortuga terrestre]] {{f}}, [[morrocoy]] {{m}} {{italbrac|Venezuela}}
 *Swedish: [[sköldpadda]] [[:sv:sköldpadda|º]]
 *[[Telugu]]: [[తాబేలు]] (taabealu)
 *[[Uyghur]]:
