/* Translations */ Portuguese: ramo <branch#2394173>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -49,6 +49,7 @@ From {{OF.}} ''[[branche]]''.
 *Finnish: [[haara]]
 {{trans-mid}}
 *Hebrew: [[ענף]] (anaf) {{m}}
+*Portuguese: [[ramo]] {{m}}
 *Slovene: [[veja]] {{f}}
 *Turkish: [[dal]]
 {{trans-bottom}}
