--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -1,5 +1,5 @@
 {{wikipediapar|branch (disambiguation)}}
-[[Image:Acacia constricta branch.jpg|thumb|right|Tree branches.]]
+[[Image:Acacia constricta branch.jpg|thumb|Tree branches.]]
 ==English==
 
 ===Pronunciation===
@@ -20,7 +20,7 @@ From {{OF.}} ''[[branche]]''.
 # Something that [[divide]]s like the branch of a tree
 # A [[location]] of an [[organization]] with several locations.
 #: ''Our main branch is downtown, and we have branches in all major suburbs.''
-## {{context|Mormonism}} A subdivision of the [[LDS]] Church, smaller than and part of a [[stake]], but smaller than a [[ward]].
+# {{context|Mormonism}} A subdivision of the [[LDS]] Church, smaller than and part of a [[stake]], but smaller than a [[ward]].
 # An area in business or of knowledge, research
 # {{nautical}} The [[certificate]] given by [[Trinity House]] to a [[pilot]] [[qualified]] to take [[navigational]] [[control]] of a [[ship]] in [[British]] [[water]]s
 
