-wikipediapar +wikipedia <branch#2394655>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -1,4 +1,4 @@
-{{wikipediapar|branch (disambiguation)}}
+{{wikipedia|branch (disambiguation)}}
 [[Image:Acacia constricta branch.jpg|thumb|Tree branches.]]
 ==English==
 
