--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -105,8 +105,18 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 *Urdu: {{URchar|[[انا|آنا]]}} (ānā)
 *Yiddish: [[קומען]] (komen)
 {{trans-bottom}}
+
 {{trans-top|To orgasm}}
 *Finnish: [[tulla]], [[saada]] [[orgasmi]]
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|To attack}}
+*Finnish: [[hyökätä]], [[käydä]] [[päälle]]
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|To get one's hands on}}
 {{trans-mid}}
 {{trans-bottom}}
 
