--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 {{Han stroke|[[Image:想-order.gif]]}}
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=4633<sub>0</sub>|canj=木山心 (DUP)}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=4633<sub>0</sub>|canj=木山心 (DUP)|ids=⿱[[相]][[心]]}}
 # [[think]], [[speculate]], [[plan]], [[consider]]
 ====References====
 {{Han ref|kx=0392.260|dkj=10858|dj=0728.100|hdz=42320.110|uh=60F3|ud=24819|bh=B751|bd=46929}}
