--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -2,13 +2,14 @@
 
 ==Translingual==
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6403<sub>4</sub>|canj=日中月大 (ALBK)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6403<sub>4</sub>|canj=日中月大 (ALBK)|ids=⿰[[日]][[央]]}}
 # [[project]]
 # [[reflect]] light
 ====References====
 {{Han ref|kx=0493.010|dkj=13838|dj=0856.010|hdz=21500.060|uh=6620|ud=26144|bh=AC4D|bd=44109}}
 
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ying2}}
