robot  Adding: [[zh-min-nan:bridge]] <bridge#2402104>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -208,6 +208,7 @@ Old English ''[[brycġian]]''
 #[[#English|bridge]]; a game of cards
 
 [[ar:bridge]]
+[[zh-min-nan:bridge]]
 [[de:bridge]]
 [[el:bridge]]
 [[fa:bridge]]
