robot  Adding: [[kk:icon]] <icon#2404827>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -104,6 +104,7 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 *[[iconismus]]
 
 [[io:icon]]
+[[kk:icon]]
 [[la:icon]]
 [[pl:icon]]
 [[ru:icon]]
