--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -132,6 +132,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[gl:find]]
 [[ko:find]]
 [[io:find]]
+[[id:find]]
 [[it:find]]
 [[kk:find]]
 [[ku:find]]
