--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -1,146 +1,196 @@
 ==English==
-
-===Pronunciation===
-*[[IPA]]: {{IPAchar|/pʊl/}}
-*{{audio|en-us-pull.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ʊl|-ʊl]]
 ===Etymology===
 {{OE.}} ''[[pullian]]''
+
+===Pronunciation===
+*{{AHD|po͝ol}}, {{IPA|/pʊl/}}, {{SAMPA|/pUl/}}
+*{{audio|en-us-pull.ogg|Audio (US)}}
+*:Rhymes: [[Rhymes:English:-ʊl|-ʊl]]
 
 ===Transitive verb===
 {{en-verb}}
 
-#To apply a [[force]] to (an object) such that it comes [[toward]] the person applying the force.
-#(''slang'') To persuade (someone) to have sex with one or to be 'on the pull' (willing to have sex).
+#To apply a [[force]] to (an object) such that it comes [[toward]] the person or thing applying the force.
+#{{context|slang}} To persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->.
 #:''He's pulled that bird over there.''
-#to [[remove]], especially from public [[circulation]] or [[availability]]
+#to [[remove]] (something), especially from public [[circulation]] or [[availability]]
 #:''Each day, they pulled the old bread and set out fresh loaves.''
-#(''informal'') to [[do]] or [[perform]]
+#{{context|informal}} to [[do]] or [[perform]]
 #:''He regularly '''pulls''' 12-hour days, sometimes 14.''
 #To [[retrieve]] or [[generate]] for use.
 #:''I'll have to '''pull''' a part number for that.''
 
 ====Synonyms====
-*(''apply force to''): [[drag]], [[tow]], [[tug]], [[yank]]
+*(''apply force to (something) so it comes toward''): [[drag]], [[tow]], [[tug]], [[yank]]
 *(''slang: persuade to have sex with one''):
-*(''remove from circulation''): [[yank]], [[recall]]
+*(''remove from circulation''): [[recall]], [[withdraw]], [[yank]]
+*(''to do, to perform''): [[carry out]], [[complete]], [[do]], [[execute]], [[perform]]
+*(''retrieve or generate for use''): [[generate]], [[get]], [[get hold of]], [[obtain]], [[retrieve]]
 
 ====Antonyms====
-*(''apply force to''): [[push]], [[shove]]
+*(''apply force to (something) so it comes towards one''): [[drag]], [[tow]], [[tug]], [[yank]]
+*(''slang: persuade to have sex with one''):
+*(''remove from circulation''): [[recall]], [[withdraw]], [[yank]]
+*(''to do, to perform''): [[carry out]], [[complete]], [[do]], [[execute]], [[perform]]
+*(''retrieve or generate for use''): [[generate]], [[get]], [[get hold of]], [[get one's hands on]], [[lay one's hands on]], [[obtain]], [[retrieve]]
 
-====Translations====
-
-'''apply force to'''
-{{top}}
-*Dutch: [[trekken]]
-*Esperanto: [[tiri]]
-*Finnish: [[vetää]]
-*French: [[tirer]] [[:fr:tirer|(fr)]]
-*German: [[ziehen]] [[:de:ziehen|(de)]]
-*Italian: [[tirare]] [[:it:tirare|(it)]]
-{{mid}}
-*Korean: [[끌다]] (kkeulda)
-*Polish: [[ciągnąć]], [[pociągnąć]]
-*Swahili: [[kuvuta]]
-*Swedish: [[dra]]
-*Telugu: [[లాగు]] (laagu)
-*Turkish: [[çekmek]]
-{{bottom}}
-
-'''slang: persuade (a person) to have sex with one
-{{top}}
-{{mid}}
-{{bottom}}
-
-===Intransitive verb===
-{{en-verb}}
-
-#To apply a [[force]] such that an object comes [[toward]] the person applying the force.
-#:''You're going to have to pull harder to get that cork out of the bottle.''
-
-====Translations====
-
-'''apply force'''
-{{top}}
-*Esperanto: [[tiri]]
-*Finnish: [[vetää]]
-*French: [[tirer]]
-*German: [[ziehen]] [[:de:ziehen|^]]
-{{mid}}
-*Italian: [[tirare]]
-*Spanish: [[halar]], [[jalar]]
-*Swedish: [[dra]]
-{{bottom}}
-
-===Noun===
-{{en-noun}}
-
-#An act of pulling.
-#:''He gave the hair a sharp '''pull''' and it came out.''
-#An [[attractive]] [[force]] which causes [[motion]] towards the source
-#:''The spaceship came under the '''pull''' of the gas giant.''
-#Any device meant to be pulled, as a [[lever]], [[knob]], [[handle]], or [[rope]].
-#:''a zipper '''pull'''''
-#(''slang'') [[influence]], especially as a means of gaining [[advantage]]
-#[[appeal|Appeal]], [[attraction]] or [[pulling]] [[power]] (as of a movie star)
-
-====Translations====
-;act of pulling
-*Swedish: [[ryck]] {{n}}
-
-;attractive force
-*Swedish: [[attraktion]] {{c}}, [[dragkraft]] {{c}}
-
-;device meant to be pulled
-
-;influence
-
-;appeal
-*Swedish: [[dragkraft]] {{c}}
-
-===Derived terms===
-{{top}}
-*[[on the pull]]
+====Derived terms====
+''See also'' '''[[pulling]]'''<!--as "pulling power"-->
+{{rel-top|Terms derived from the verb ''to pull''}}
 *[[pull a|pull a...]]
 *[[pull a face]]
 *[[pull away]]
 *[[pull back]]
 *[[pull down]]
-*[[pulley]]
+<!--"pulley" is not derived from "pull"-->
 *[[pull in]]
 *[[pulling]]
 *[[pull off]]
+*[[pull oneself together]] 
 *[[pull out]]
-{{mid}}
+{{rel-mid}}
 *[[pull over]]
-*[[pullover]]
+<!--"pullover" is derived from "pull over"-->
 *[[pull-quote]]
 *[[pull rank]]
 *[[pull round]]
 *[[pull somebody's leg]]
+*[[pull the other one]], [[pull the other one, it's got bells on]]
 *[[pull through]]
 *[[pull together]] 
 *[[pull up]]
-*[[pull-up]]
-*[[pull yourself together]] 
-{{bottom}}
+<!--"pull-up" is derived from "pull up"-->
+{{rel-bottom}}
+
+====Translations====
+{{trans-top|apply force to (something) so it comes towards one}}
+*Dutch: [[trekken]]
+*[[Esperanto]]: [[tiri]]
+*Finnish: [[vetää]]
+*French: {{t|fr|tirer}}
+*German: {{t|de|ziehen}}
+*Italian: [[tirare]] [[:it:tirare|(it)]]
+{{trans-mid}}
+*Korean: [[끌다]] (kkeulda)
+*Polish: [[ciągnąć]], [[pociągnąć]]
+*[[Swahili]]: [[kuvuta]]
+*Swedish: [[dra]]
+*[[Telugu]]: [[లాగు]] (laagu)
+*Turkish: [[çekmek]]
+{{trans-bottom}}
+
+{{trans-top|slang: persuade (a person) to have sex with one}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|remove (something) from circulation}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|do, perform}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|retrieve or generate for use}}
+{{trans-mid}}
+{{trans-bottom}}
+
+===Intransitive verb===
+{{en-verb}}
+
+#To apply a force such that an object comes toward the person or thing applying the force.
+#:''You're going to have to pull harder to get that cork out of the bottle.''
+#{{context|slang}} To succeed in finding a person with whom to have sex.
+
+====Synonyms====
+*(''slang: succeed in finding a person with whom to have sex''): [[score]]
+
+====Translations====
+{{trans-top|apply force such that an object comes toward the person or thing applying the force}}
+*Esperanto: [[tiri]]
+*Finnish: [[vetää]]
+*French: {{t|fr|tirer}}
+*German: {{t|de|ziehen}}
+{{trans-mid}}
+*Italian: {{t|it|tirare}}
+*Spanish: [[halar]], [[jalar]]
+*Swedish: [[dra]]
+{{trans-bottom}}
+
+{{trans-top|succeed in finding a person with whom to have sex}}
+{{trans-mid}}
+{{trans-bottom}}
+
+===Noun===
+{{en-noun}}
+
+#An act of pulling (applying force).
+#:''He gave the hair a sharp '''pull''' and it came out.''
+#An [[attractive]] [[force]] which causes [[motion]] towards the source
+#:''The spaceship came under the '''pull''' of the gas giant.''
+#:''iron fillings drawn by the '''pull''' of a magnet''
+#Any device meant to be pulled, as a [[lever]], [[knob]], [[handle]], or [[rope]].
+#:''a zipper '''pull'''''
+#(''slang'') [[influence]], especially as a means of gaining [[advantage]]
+#[[appeal|Appeal]] or [[attraction]] or (as of a movie star)
+
+====Synonyms====
+*(''act of pulling''): [[tug]], [[yank]]
+*(''attractive force''): [[attraction]]
+*(''device meant to be pulled''): [[handle]], [[knob]], [[lever]], [[rope]]
+*(''influence''): [[influence]], [[sway]]
+
+====Antonyms====
+*(''act of pulling''): [[push]], [[shove]]
+*(''attractive force''): [[repulsion]]
+*(''device meant to be pulled''): [[button]], [[push]], [[push button]]
+*(''influence''):
+
+====Derived terms====
+{{rel-top|Terms derived from the noun ''pull''}}
+*[[on the pull]]
+{{rel-mid}}
+*[[ring-pull]]
+{{rel-bottom}}
+
+====Translations====
+{{trans-top|act of pulling}}
+{{trans-mid}}
+*Swedish: [[ryck]] {{n}}
+{{trans-bottom}}
+
+{{trans-top|attractive force}}
+{{trans-mid}}
+*Swedish: [[attraktion]] {{c}}, [[dragkraft]] {{c}}
+{{trans-bottom}}
+
+{{trans-top|device meant to be pulled}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|influence}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|appeal}}
+{{trans-mid}}
+*Swedish: [[dragkraft]] {{c}}
+{{trans-bottom}}
 
 [[Category:1000 English basic words]]
 
 ----
-
 ==French==
-
 ===Pronunciation===
-*/pyl/
+*{{IPA|/pyl/}}, {{SAMPA|/pyl/}}
 
 ===Etymology===
-From {{E.}} [[pullover]].
+{{E.}} '''[[pullover]]'''
 
 ===Noun===
 {{en-noun|m}}
-# [[pullover]], [[sweatshirt]]
-#: ''Il fait froid, je vais mettre mon '''pull'''.''
+# [[pullover]]<!--"sweatshirt" is not the same garment-->
+#: ''Il fait froid; je vais mettre mon '''pull''''' &mdash; It's cold; I'm going to put on my pullover
 
 [[Category:fr:Clothing]]
 
