--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -34,6 +34,7 @@ From {{OF.}} ''[[branche]]''.
 *German: [[Ast]] {{m}}
 *Hebrew: [[ענף]] (anaf) {{m}}
 {{trans-mid}}
+*Kurdish: {{KUchar|[[چرۆ]]}}
 *Portugese: [[galho]] {{m}}
 *Russian: [[ветвь]] {{f}}, [[ветка]] {{f}}
 *Slovene: [[veja]] {{f}}
