/* Translations */ +Czech <curtain#2409421>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -20,6 +20,12 @@
 *[[final curtain]]
 
 ====Translations====
+{{trans-top|piece of cloth covering a window}}
+*Czech: [[záclona]] {{f}}
+{{trans-mid}}
+{{trans-bottom}}
+=====Translations to be checked=====
+{{checktrans}}
 {{top}}
 *Arabic:ستارة [[setarah]]
 *CJKV Characters: [[幕]]
