--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -28,6 +28,7 @@ See [[WikiSaurus:vomit]]
 *Italian: [[vomitare]], [[rimettere]]
 {{mid}}
 *Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
+*Maltese: [[irrimetta]] {{m}}, [[irrimettat]] {{f}}, [[qala']] {{m}}, [[qalgħat]] {{f}}
 *Norwegian: [[kaste opp]]
 *Polish: [[wymiotować]], [[rzygać]]
 *Portuguese: [[vomitar]]
