--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -52,6 +52,7 @@ See [[WikiSaurus:vomit]].
 *Dutch: [[braaksel]], ''(colloquial)'' [[kots]]
 *Estonian: [[okse]]
 *Finnish: [[oksennus]]
+*Maltese: [[rimettar]]
 {{mid}}
 *Norwegian: [[oppkast]] {{n}}
 *Portuguese: [[vômito]] {{m}}
