robot  Adding: [[id:straight]], [[ku:straight]] <straight#2417171>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -183,7 +183,9 @@
 [[es:straight]]
 [[fr:straight]]
 [[io:straight]]
+[[id:straight]]
 [[it:straight]]
+[[ku:straight]]
 [[hu:straight]]
 [[pl:straight]]
 [[ru:straight]]
