--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -40,9 +40,7 @@
 *{{ttbc|Japanese}}: [[費用]] ([[ひよう]], hiyō)
 
 ===Verb===
-[[Category:English irregular verbs]]
 {{en-verb|costs|costing|cost}}
-
 # To [[incur]] a [[charge]], a [[price]].
 
 ====Translations====
@@ -57,6 +55,12 @@
 *Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 *Japanese: [[費やす]] ([[ついやす]], tsuiyasu)
 {{trans-bottom}}
+
+[[Category:English irregular verbs]]
+[[Category:English simple past forms]]
+[[Category:English irregular simple past forms]]
+[[Category:English past participles]]
+[[Category:English irregular past participles]]
 
 [[el:cost]]
 [[fa:cost]]
