--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Alternative spellings===
-*[[pyjamas]] (''UK'', ''Australia'')
+*[[pyjamas]] (''Australia'',''UK'')
 
 ===Etymology===
 From the {{Pers.}} {{FAchar|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''leg garment'' via {{Urd.}}/{{Hind.}} [[पैजामा]].
