/* Derived terms */ <butter#2423688>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -67,7 +67,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 *[[buttercup]]
 *[[butter-cutter]]
 *[[butter dish]], [[butter-dish]]
-*[[butter-dock]]
+*[[butter dock]], [[butter-dock]]
 *[[butter-duck]]
 *[[butter-factor]]
 *[[butter fat]], [[butter-fat]], [[butterfat]]
