robot  Adding: [[tr:Yugoslavia]] <Yugoslavia#2425012>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -55,3 +55,4 @@ From [[Serbo-Croatian]] [[jug]]o (''south'') and '''slavija''' (''slavia'', the 
 [[hu:Yugoslavia]]
 [[pl:Yugoslavia]]
 [[fi:Yugoslavia]]
+[[tr:Yugoslavia]]
