--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -4,7 +4,7 @@
 ===Etymology===
 [[曐]] is the original chatacter. The upper part [[晶]], it is shaped from twinkling stars. [[生]] is the sound and mean fresh sprouts. Or, 晶 is the sound.
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6010<sub>4</sub>|canj=日竹手一 (AHQM)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6010<sub>4</sub>|canj=日竹手一 (AHQM)|ids=⿱[[日]][[生]]}}
 # a [[star]], [[planet]]
 # any point of light
 # shorthand for [[Singapore]] (星加坡)
@@ -12,6 +12,7 @@
 {{Han ref|kx=0492.210|dkj=13837|dj=0855.220|hdz=21500.120|uh=661F|ud=26143|bh=AC50|bd=44112}}
 
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sing1}}
