robot  Adding: [[id:chose]] <chose#2427172>

--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -46,6 +46,7 @@ Compare Italian ''[[cosa]]'', Portuguese ''[[coisa]]'', Spanish ''[[cosa]]''.
 [[fr:chose]]
 [[ko:chose]]
 [[io:chose]]
+[[id:chose]]
 [[it:chose]]
 [[hu:chose]]
 [[ru:chose]]
