--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=0033<sub>6</sub>|canj=卜廿日心 (YTAP)}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=0033<sub>6</sub>|canj=卜廿日心 (YTAP)|ids=⿱[[音]][[心]]}}
 # [[thought]], [[idea]], [[opinion]]
 # [[think]]
 
@@ -9,6 +9,7 @@
 {{Han ref|kx=0394.220|dkj=10921|dj=0730.280|hdz=42323.030|uh=610F|ud=24847|bh=B74E|bd=46926}}
 
 ----
+
 ==Cantonese==
 
 ===Hanzi===
