/* Translations */ de checked <substance#2431471>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -25,6 +25,7 @@ From {{OF.}} ''[[#French|substance]]''.
 *Finnish: [[aine]], [[materia]]
 *French: substance {{f}}
 *Hebrew: {{he-translation|חומר|khómer}} {{m}}
+*German: [[Substanz]] {{f}}
 *Greek: [[ουσία]] (usia) {{f}}
 *Latvian: [[viela]] {{f}}
 {{trans-mid}}
@@ -40,6 +41,7 @@ From {{OF.}} ''[[#French|substance]]''.
 *Danish: [[substans]], [[hovedindhold]]
 *Finnish: [[ydin]], [[substanssi]]
 *French: substance {{f}}
+*German: [[Substanz]] {{f}}
 *Greek: [[ουσιώδης]] (usiodes) {{m}}
 *Hebrew: {{he-translation|תוכן|tókhen}} {{m}}
 {{trans-mid}}
@@ -51,6 +53,7 @@ From {{OF.}} ''[[#French|substance]]''.
 {{trans-top|true meaning}}
 *Danish: [[indhold]], [[substans]]
 *Dutch: [[kern]], [[essentie]] {{f}}
+*German: [[Substanz]] {{f}}
 *Greek: [[ουσία]] (usia) {{f}}
 *Hebrew: {{he-translation|מהות|mahút}} {{f}}
 *Norwegian: [[essens]] {{m}}, [[kjerne]] {{m}}
@@ -62,6 +65,7 @@ From {{OF.}} ''[[#French|substance]]''.
 {{trans-top|considerable wealth}}
 *Danish: [[formue]]
 *Finnish: [[vara|varat]]
+*German: [[Substanz]] {{f}}
 *Norwegian: [[formue]] {{m}}
 *Russian: [[вес]] (ves) {{m}}
 {{trans-mid}}
@@ -70,6 +74,7 @@ From {{OF.}} ''[[#French|substance]]''.
 
 {{trans-top|drugs}}
 *Finnish: [[aine|aineet]]
+*German: [[Substanz]] {{f}}
 *Greek: [[ναρκωτικά]] (narkotika) {{n}} {{p}}, [[ναρκωτικές ουσίες]] (narkotikes usies) {{f}} {{p}}
 {{trans-mid}}
 *Norwegian: [[narkotika]]
@@ -88,7 +93,6 @@ From {{OF.}} ''[[#French|substance]]''.
 *{{ttbc|Dutch}}: [[substantie]]
 *{{ttbc|Esperanto}}: [[substanco]]
 *{{ttbc|Estonian}}: [[aine]]
-*{{ttbc|German}}: [[Substanz]] {{f}}
 *{{ttbc|Hungarian}}: [[tartalom]]
 *{{ttbc|Indonesian}}: [[bahan]]
 *{{ttbc|Interlingua}}: [[substantia]]
