/* Han character */ ids <旨#2432626>

--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -1,11 +1,12 @@
 ==Translingual==
 ===Han character===
-{{Han char|rn=72|rad=日|as=02|sn=6|four=2160<sub>1</sub>|canj=心日 (PA), X心日 (XPA)}}
+{{Han char|rn=72|rad=日|as=02|sn=6|four=2160<sub>1</sub>|canj=心日 (PA), X心日 (XPA)|ids=⿱[[匕]][[日]]}}
 # [[purpose]], [[aim]]
 # [[excellent]]
 ====References====
 {{Han ref|kx=0489.060|dkj=13738|dj=0850.050|hdz=21485.070|uh=65E8|ud=26088|bh=A6AE|bd=42670}}
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ji2}}
