/* Han character */ ids <昭#2432638>

--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -1,11 +1,12 @@
 ==Translingual==
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6706<sub>2</sub>|canj=日尸竹口 (ASHR)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6706<sub>2</sub>|canj=日尸竹口 (ASHR)|ids=⿰[[日]][[召]]}}
 # [[bright]], [[luminous]]
 # [[illustrious]]
 ====References====
 {{Han ref|kx=0493.220|dkj=13855|dj=0858.020|hdz=21504.090|uh=662D|ud=26157|bh=AC4C|bd=44108}}
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chiu1}}
