verb translations only on the page for the infinitive <felt#2434476>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -47,8 +47,7 @@ Anglo Saxon ''felt''; akin to Dutch ''[[vilt]]'', German ''[[Filz]]'', and possi
 *[[felt-tip pen]]
 
 ====Verb====
-'''to felt''' ([[felts]], [[felted]], [[felting]])
-
+{{en-verb}}
 # {{transitive}} To make into felt, or a feltlike substance; to cause to adhere and mat together. &mdash; [[Sir M. Hale]]
 # {{transitive}} To cover with, or as with, felt; as, to felt the cylinder of a steam emgine.
 
@@ -70,36 +69,11 @@ Anglo Saxon ''felt''; akin to Dutch ''[[vilt]]'', German ''[[Filz]]'', and possi
 See ''[[feel]]''.
 
 ====Verb====
-'''felt'''[[Category:English verbs that lack inflection template]]
+'''felt'''
+# {{past of|feel}}
 
-# past tense of to [[feel]]
-
-=====Translations=====
-{{trans-top}}
-*Chinese: [[感覺]], [[感觉]] (gǎnjué)
-*Danish: [[følte]]
-*Dutch: [[voelde]], [[voelden]]
-*Indonesian: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]]
-{{trans-mid}}
-*Japanese: [[感じた]] ([[かんじた]], kanjita)
-*Swedish: [[kände]]
-{{trans-bottom}}
-
-====Verb====
-'''felt'''[[Category:English verbs that lack inflection template]]
-
-# past participle of to [[feel]]
-
-=====Translations=====
-{{trans-top}}
-*Danish: [[følt]]
-*Dutch: [[gevoeld]]
-*Indonesian: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]], [[rasa|terasa]]
-*Japanese: [[感じた]] ([[かんじた]], kanjita), [[感じられた]] ([[かんじられた]], kanjirareta)
-{{trans-mid}}
-*Spanish: [[sentido]]
-*Swedish: [[känt]]
-{{trans-bottom}}
+[[Category:English irregular simple past forms]]
+[[Category:English irregular past participles]]
 
 ----
 
