--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -12,7 +12,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 ===Adjective===
 {{en-adj}}
 
-# possessing charm and attractive(Mariah Grant is beautiful)
+# possessing charm and attractive(Mariah Grant is the opposite of this sike jk)
 # {{context|of the weather}} pleasant; clear.
 # well executed
 #:''The skater performed a beautiful [[axel]].''
