--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -19,14 +19,16 @@
 #: ''You're '''speaking''' too fast.''
 # {{intransitive}} To have a [[conversation]].
 #: ''It's been ages since we've '''spoken'''.''
-# {{context|by extension}} To [[communicate]] or [[converse]] by some other means, such as writing or facial expressions.
+# {{context|by extension}} To [[communicate]] or [[converse]] by some means other than [[orally]], such as [[writing]] or [[facial]] [[expressions]].
 #: ''He '''spoke''' of it in his diary''
 #: '' '''Speak''' to me only with your eyes.''
 #: ''I just '''spoke''' with them on IRC.''
 #: ''Actions '''speak''' louder than words''.
 # {{intransitive}} To deliver a message to a group; to deliver a [[speech]].
+#: ''This evening I shall '''speak''' on the topic of correct English usage.''
 # {{transitive}} To be able to communicate in a [[language]].
-#: ''He '''speaks''' Klingon fluently''.
+#: ''I was so surprised that I couldn't '''speak''' a word.''
+#: ''He '''speaks''' Mandarin fluently''.
 
 ====Synonyms====
 *[[articulate]]
