--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -38,6 +38,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 
 ====Related terms====
 *[[beauty]]
+{{Wikisaurus-link|beautiful woman}}
 
 ====Translations====
 {{trans-top|possessing charm and attractive}}
