/* Related terms */ **See also [[Wikisaurus:beautiful woman]] <beautiful#2436596>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -38,7 +38,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 
 ====Related terms====
 *[[beauty]]
-{{Wikisaurus-link|beautiful woman}}
+**See also [[Wikisaurus:beautiful woman]]
 
 ====Translations====
 {{trans-top|possessing charm and attractive}}
