--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -30,6 +30,7 @@
 *Portuguese: [[europeu]] ''m'', [[europeia]] ''f''
 *Spanish: [[europeo]]
 *Swedish: [[europeisk]]
+*Welsh: [[Ewropeaidd]]
 {{bottom}}
 
 ===Noun===
