--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -82,7 +82,7 @@ Old English ''[[sūcan]]''
 ====Quotations====
 *'''1916''': "You are McGlade's '''suck'''." - [[w:James Joyce|James Joyce]], ''[[w:Portrait of the Artist as a Young Man|Portrait of the Artist as a Young Man]] (Macmillan Press Ltd, paperback, 23)
 
-*'''1970''': "...(The Rum Diary) has a few very high points...but as a novel, '''it sucks'''." - [[w:Hunter S. Thompson|Hunter S. Thompson]], Fear and Loathing in America (Simon and Schuster, hardcover, pg. 251)''
+*'''1970''': "...(The Rum Diary) has a few very high points...but as a novel, '''it sucks'''." - [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America (Simon and Schuster, hardcover, pg. 251)''
 
 ----
 
