--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -6,17 +6,7 @@
 
 ===Verb===
 '''chosen'''
-
-# past participle of to [[choose]]
-
-====Translations====
-*Danish: [[valgt]]
-*Dutch: [[gekozen]]
-*Finnish: [[valittu]]
-*Indonesian: [[pilih]], [[pilah]], [[pilih|memilih]], [[pilih|dipilih]], [[pilih|terpilih]]
-*Japanese: [[選んだ]] ([[えらんだ]], eranda),  [[選ばれた]] ([[えらばれた]], erabareta)
-*Swedish: [[valt]]
-*Spanish: [[elegido]]
+# {{past participle of|choose}}
 
 [[ang:chosen]]
 [[el:chosen]]
