--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -8,6 +8,8 @@
 '''chosen'''
 # {{past participle of|choose}}
 
+[[Category:English irregular past participles]]
+
 [[ang:chosen]]
 [[el:chosen]]
 [[fr:chosen]]
