--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -15,7 +15,7 @@ Abbreviation of Latin ''[[exempli gratiā]]'' ("for example"). ''Gratiā'' here 
 
 ====Usage notes====
 *The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''  
-*Place ''e.g.'' between parentheses when used in written text and follow by a [[comma]] when used in its function as "for example".
+*Place ''e.g.'' between [[parentheses]] when used in written text and follow by a [[comma]] when used in its function as "for example".
 *Opinion is mixed about whether this term should be italicized and whether it should be written with a separating non-breaking space as in ''e. g.''
 
 ====Translations====
