verb translations only on the page for the infinitive <came#2452168>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -17,7 +17,7 @@
 ===Anagrams===
 *[[mace]]
 
-[[Category:English irregular simpe past forms]]
+[[Category:English irregular simple past forms]]
 [[Category:200 English basic words]]
 
 [[de:came]]
