--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -1,4 +1,6 @@
 {{see|Saffron}}
+[[Image:Iran saffron threads.jpg|thumb|right|Saffron threads used as a culinary seasoning. ]]
+[[Image:Crocus_sativus_sahuran.jpg|thumb|right|The saffron crocus plant.]]
 ==English==
 {{wikipedia}}
 
