robot  Adding: [[id:choose]] <choose#2452492>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -93,6 +93,7 @@ From Old English [[ceosan|ċēosan]].
 [[ko:choose]]
 [[hy:choose]]
 [[io:choose]]
+[[id:choose]]
 [[it:choose]]
 [[kk:choose]]
 [[hu:choose]]
