--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -26,6 +26,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *(''of the weather''): [[clear]], [[fine]], [[nice]], [[pleasant]], [[sunny]]
 *(''well executed''): [[excellent]], [[exceptional]], [[good]], [[great]], [[marvellous]]/[[marvelous]], [[perfect]], [[stylish]], [[wonderful]]
 *(''ironic: how unfortunate''): [[great]], [[marvellous]]/[[marvelous]], [[nice]], very nice, [[wonderful]] (''any of these can be prefixed with an [[intensifier]] such as'' [[bloody]], [[damned]] ''or'' [[just]])
+*[[Jessica]]
 
 ====Antonyms====
 *(''possessing charm and attractive''): [[grotesque]], [[hideous]], [[homely]], [[plain]], [[misshapen]], [[repulsive]], [[ugly]]
