--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -82,6 +82,7 @@
 *Japanese: [[話す]] ([[はなす]], hanasu)
 *Korean: [[말하다]] (malhada)
 *Latin: [[dicere]]
+*Occitan: [[parlar]]
 *Polish: [[mówić]]
 *Portuguese: [[falar]]
 *Romanian: [[vorbi]],  [[discuta]]
