--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-: from Middle French "''blond''" (masculine); "''blonde''" (feminine) which likely derived from Germanic (cf. Old English 'blondenfeax' - grey-haired).
+: from Middle French "''blond''" (masculine); "''blonde''" (feminine) which likely derived from Germanic (cf. Old English "''blonden''feax" - grey-haired).
 
 ===Pronunciation===
 *:Rhymes: [[Rhymes:English:-ɒnd|-ɒnd]]
