--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 
-Entered English around 1300 from Old French ''penne'', "feather", which came from Latin ''[[penna#Latin|penna]]'', also "feather". Probably related to Greek ''[[ptero-|pteron]]'', "wing" or "feather", and Old English ''[[feþer]]'', "feather", via Proto-Indo European root *peta-, "fly".
+Entered English around 1300 from Old French ''penne'', "feather", which came from Latin ''[[penna#Latin|penna]]'', also "feather". Probably related to Greek ''[[ptero-|pteron]]'', "wing" or "feather", and Old English ''[[feþer]]'', "feather", via Proto-Indo European root *peta-, "fly". [http://www.etymonline.com/index.php?term=pen]
 
 ===Pronunciation===
 *{{IPA|/pɛn/}}
