--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -54,7 +54,7 @@
 *Portuguese: [[caneta]] {{f}}
 *Russian: [[ручка]] (rúčka) {{f}}
 *Scottish Gaelic: [[peann]] {{m}}
-*Spanish: [[pluma]] {{f}} 
+*Spanish: [[pluma]] {{f}}
 *Swedish: [[penna#Swedish|penna]]
 *[[Telugu]]: [[పెన్ను]], [[కలము]], [[కలం]] (pennu, kalamu, kalam)
 *Turkish: [[kalem]]
@@ -77,6 +77,7 @@
 {{trans-bottom}}
 
 ===Transitive verb===
+{{rfc-trverb|Transitive verb}}
 '''to pen''' ([[penned]] / [[pent]], penned / pent)
 
 # To write (an article, a book, etc.)
