--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -87,7 +87,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 *Japanese: [[来る]] (くる, kúru)
 *Korean: [[오다]] (oda)
 {{trans-mid}}
-*Kurdish: [[hatin]]
+*Kurdish: [[hatin]], {{KUchar|[[هاتن]]}}
 *Latin: [[venire]]
 *Manchu: [[jimbi]]
 *Mongolian: [[ирэх]] (irekh)
