--- a/en/値/値.11033.wikitext
+++ b/en/値/値.11033.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kǒng]] (kong3), [[zhí]] (zhi2)|wg=k'ung<sup>3</sup>, chih<sup>2</sup>}}
+{{cmn-hanzi|pin=[[kǒng]] ([[kong3]]), [[zhí]] ([[zhi2]])|wg=k'ung<sup>3</sup>, chih<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:値]]
