--- a/en/倥/倥.11034.wikitext
+++ b/en/倥/倥.11034.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kōng]] (kong1)|wg=k'ung<sup>1</sup>}}
+{{cmn-hanzi|pin=[[kōng]] ([[kong1]])|wg=k'ung<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:倥]]
