--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -33,7 +33,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[juàn]] (juan4), [[qìng]] (qing4)|wg=chüan<sup>4</sup>, ch'ing<sup>4</sup>}}
+{{cmn-hanzi|pin=[[juàn]] ([[juan4]]), [[qìng]] ([[qing4]])|wg=chüan<sup>4</sup>, ch'ing<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:倦]]
