--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -12,7 +12,6 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 ===Adjective===
 {{en-adj}}
 
-#:''Kirsten Darel''
 # possessing charm and attractive
 # {{context|of the weather}} pleasant; clear.
 # well executed
@@ -20,7 +19,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 # <!--not an interjection-->(''as a [[pro-sentence]]'') How beautiful that is!
 #:''Beautiful! What a catch!'' (referring to an athlete catching a ball)
 # <!--not an interjection-->(''as a pro-sentence; ironic'') How unfortunate that is!
-
+#:''Beautiful! I dropped the soup on the floor!''
 
 ====Synonyms====
 *(''possessing charm and attractive''): [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[handsome]], [[hot]] (''slang''), [[lovely]], [[nice-looking]], [[pretty]], [[shapely]]
