link Hanzi tones  ([[Project:AWB|AWB]]) <倪#2491224>

--- a/en/倪/倪.11045.wikitext
+++ b/en/倪/倪.11045.wikitext
@@ -1,8 +1,8 @@
 ==Translingual==
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2721<sub>7</sub>|canj=人竹X山 (OHXU)}}
-# feeble, tiny, young and weak
-# a Chinese surname
+# [[feeble]], [[tiny]], [[young]] and [[weak]]
+# a [[Chinese]] [[surname]]
 ====References====
 {{Han ref|kx=0109.020|dkj=00792|dj=0231.110|hdz=10179.090|uh=502A|ud=20522|bh=ADD9|bd=44505}}
 ----
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[ní]] (ni2), [[nì]] (ni4)|wg=ni<sup>2</sup>, ni<sup>4</sup>}}
+{{cmn-hanzi|pin=[[ní]] ([[ni2]]), [[nì]] ([[ni4]])|wg=ni<sup>2</sup>, ni<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[zh-min-nan:倪]]
