--- a/en/倲/倲.11064.wikitext
+++ b/en/倲/倲.11064.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[dōng]] (dong1)|wg=tung<sup>1</sup>}}
+{{cmn-hanzi|pin=[[dōng]] ([[dong1]])|wg=tung<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:倲]]
