--- a/en/倳/倳.11066.wikitext
+++ b/en/倳/倳.11066.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zì]] (zi4)|wg=tzu<sup>4</sup>}}
+{{cmn-hanzi|pin=[[zì]] ([[zi4]])|wg=tzu<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:倳]]
