--- a/en/倶/倶.11073.wikitext
+++ b/en/倶/倶.11073.wikitext
@@ -3,7 +3,7 @@
 ==Translingual==
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人月山金 (OBUC)}}
-# all
+# [[all]]
 ====References====
 {{Han ref|kx=0109.171|dkj=00724|hdz=10177.021|uh=5036|ud=20534}}
 ----
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jù]] (ju4)|wg=chü<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:倶]]
