--- a/en/倷/倷.11075.wikitext
+++ b/en/倷/倷.11075.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[nài]] (nai4), [[zhì]] (zhi4)|wg=nai<sup>4</sup>, chih<sup>4</sup>}}
+{{cmn-hanzi|pin=[[nài]] ([[nai4]]), [[zhì]] ([[zhi4]])|wg=nai<sup>4</sup>, chih<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:倷]]
