--- a/en/倸/倸.11077.wikitext
+++ b/en/倸/倸.11077.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[cǎi]] (cai3)|wg=ts'ai<sup>3</sup>}}
+{{cmn-hanzi|pin=[[cǎi]] ([[cai3]])|wg=ts'ai<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 
