--- a/en/倹/倹.11078.wikitext
+++ b/en/倹/倹.11078.wikitext
@@ -22,7 +22,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiǎn]] (jian3)|wg=chien<sup>3</sup>}}
+{{cmn-hanzi|pin=[[jiǎn]] ([[jian3]])|wg=chien<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:倹]]
