--- a/en/债/债.11079.wikitext
+++ b/en/债/债.11079.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=債|pin=[[zhài]] (zhai4)|wg=chai<sup>4</sup>}}
+{{cmn-hanzi|tra=債|pin=[[zhài]] ([[zhai4]])|wg=chai<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 
