--- a/en/倻/倻.11080.wikitext
+++ b/en/倻/倻.11080.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yē]] (ye1)|wg=yeh<sup>1</sup>}}
+{{cmn-hanzi|pin=[[yē]] ([[ye1]])|wg=yeh<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:倻]]
