--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -30,7 +30,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zhí]] (zhi2)|wg=chih<sup>2</sup>}}
+{{cmn-hanzi|pin=[[zhí]] ([[zhi2]])|wg=chih<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:值]]
