link Hanzi tones  ([[Project:AWB|AWB]]) <倽#2491404>

--- a/en/倽/倽.11083.wikitext
+++ b/en/倽/倽.11083.wikitext
@@ -10,7 +10,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jià]] (jia4), [[shà]] (sha4), [[xiá]] (xia2)|wg=chia<sup>4</sup>, sha<sup>4</sup>, hsia<sup>2</sup>}}
+{{cmn-hanzi|pin=[[jià]] ([[jia4]]), [[shà]] ([[sha4]]), [[xiá]] ([[xia2]])|wg=chia<sup>4</sup>, sha<sup>4</sup>, hsia<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 
