--- a/en/倾/倾.11084.wikitext
+++ b/en/倾/倾.11084.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=傾|pin=[[qīng]] (qing1)|wg=ch'ing<sup>1</sup>}}
+{{cmn-hanzi|tra=傾|pin=[[qīng]] ([[qing1]])|wg=ch'ing<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 
