--- a/en/偁/偁.11087.wikitext
+++ b/en/偁/偁.11087.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chēng]] (cheng1)|wg=ch'eng<sup>1</sup>}}
+{{cmn-hanzi|pin=[[chēng]] ([[cheng1]])|wg=ch'eng<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偁]]
