--- a/en/偄/偄.11090.wikitext
+++ b/en/偄/偄.11090.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[nuàn]] (nuan4)|wg=nuan<sup>4</sup>}}
+{{cmn-hanzi|pin=[[nuàn]] ([[nuan4]])|wg=nuan<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偄]]
