--- a/en/偆/偆.11093.wikitext
+++ b/en/偆/偆.11093.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǔn]] (chun3)|wg=ch'un<sup>3</sup>}}
+{{cmn-hanzi|pin=[[chǔn]] ([[chun3]])|wg=ch'un<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偆]]
