--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -27,7 +27,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiǎ]] (jia3)|wg=chia<sup>3</sup>}}
+{{cmn-hanzi|pin=[[jiǎ]] ([[jia3]])|wg=chia<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 * '''Compounds''':
