--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -27,7 +27,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jì]] (ji4), [[jié]] (jie2)|wg=chi<sup>4</sup>, chieh<sup>2</sup>}}
+{{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[jié]] ([[jie2]])|wg=chi<sup>4</sup>, chieh<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偈]]
