--- a/en/偋/偋.11099.wikitext
+++ b/en/偋/偋.11099.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[bǐng]] (bing3), [[dàng]] (dang4)|wg=ping<sup>3</sup>, tang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[bǐng]] ([[bing3]]), [[dàng]] ([[dang4]])|wg=ping<sup>3</sup>, tang<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偋]]
