--- a/en/偌/偌.11100.wikitext
+++ b/en/偌/偌.11100.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[ruò]] (ruo4)|wg=jo<sup>4</sup>}}
+{{cmn-hanzi|pin=[[ruò]] ([[ruo4]])|wg=jo<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偌]]
