link Hanzi tones  ([[Project:AWB|AWB]]) <偐#2491483>

--- a/en/偐/偐.11104.wikitext
+++ b/en/偐/偐.11104.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人卜竹竹 (OYHH)}}
-# false, counterfeit, spurious
+# [[false]], [[counterfeit]], [[spurious]]
 ====References====
 {{Han ref|kx=0110.180|dkj=00850|dj=0236.020|hdz=10194.100|uh=5050|ud=20560}}
 ----
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yàn]] (yan4)|wg=yen<sup>4</sup>}}
+{{cmn-hanzi|pin=[[yàn]] ([[yan4]])|wg=yen<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偐]]
