--- a/en/偓/偓.11107.wikitext
+++ b/en/偓/偓.11107.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiē]] (jie1), [[wò]] (wo4)|wg=chieh<sup>1</sup>, wo<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jiē]] ([[jie1]]), [[wò]] ([[wo4]])|wg=chieh<sup>1</sup>, wo<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偓]]
