--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zuò]] (zuo4)|wg=tso<sup>4</sup>}}
+{{cmn-hanzi|pin=[[zuò]] ([[zuo4]])|wg=tso<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
