--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -36,7 +36,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tíng]] (ting2)|wg=t'ing<sup>2</sup>}}
+{{cmn-hanzi|pin=[[tíng]] ([[ting2]])|wg=t'ing<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:停]]
