--- a/en/偞/偞.11118.wikitext
+++ b/en/偞/偞.11118.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yè]] (ye4)|wg=yeh<sup>4</sup>}}
+{{cmn-hanzi|pin=[[yè]] ([[ye4]])|wg=yeh<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偞]]
