--- a/en/偠/偠.11120.wikitext
+++ b/en/偠/偠.11120.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yǎo]] (yao3)|wg=yao<sup>3</sup>}}
+{{cmn-hanzi|pin=[[yǎo]] ([[yao3]])|wg=yao<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偠]]
