--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -40,6 +40,7 @@ Old English ''[[sūcan]]''
 *Norwegian: [[suge]]
 *Portuguese: [[chupar]], [[sugar]]
 *Polish: [[ssać]]
+*Romanian: [[suge]]
 *Russian: [[сосать]] (sosát’), [[всасывать]] (vsásyvat’)
 *Slovak: [[cmúľať]]
 *Spanish: [[chupar]]
