--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -13,7 +13,7 @@ Old English ''[[sūcan]]''
 
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
 # To draw into, by any means, with an attractive force, usually without direct contact
-# (''colloquial'') Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.''
+# {{colloquial}} Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.''
 # To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation.
 
 ====Synonyms====
@@ -93,8 +93,7 @@ Old English ''[[sūcan]]''
 {{sv-noun-reg-ar}}
 '''suck''' {{c}}
 
-#[[sigh]]; a deep and prolonged audible inspiration or respiration
-
+# [[sigh]]; a deep and prolonged audible inspiration or respiration
 
 [[es:suck]]
 [[fa:suck]]
