/* Transitive verb */ <pen#2496787>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -76,12 +76,11 @@
 *Russian: [[лебёдка]] (lebjódka) {{f}}
 {{trans-bottom}}
 
-===Transitive verb===
-{{rfc-trverb|Transitive verb}}
+===Verb===
 '''to pen''' ([[penned]] / [[pent]], penned / pent)
 
-# To write (an article, a book, etc.)
-# To enclose. The irregular past tense ''pent'' is primarily used in a figurative sense in the phrase “pent up”.
+# {{transitive}} To [[write]] (an article, a book, etc.)
+# {{transitive}} To [[enclose]] in a pen. The irregular past tense ''pent'' is primarily used in a figurative sense in the phrase “pent up”.
 
 ====Translations====
 {{trans-top|to write}}
