--- a/en/偡/偡.11121.wikitext
+++ b/en/偡/偡.11121.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zhàn]] (zhan4)|wg=chan<sup>4</sup>}}
+{{cmn-hanzi|pin=[[zhàn]] ([[zhan4]])|wg=chan<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偡]]
