--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -29,7 +29,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiàn]] (jian4)|wg=chien<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jiàn]] ([[jian4]])|wg=chien<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
