--- a/en/偩/偩.11129.wikitext
+++ b/en/偩/偩.11129.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[fù]] (fu4)|wg=fu<sup>4</sup>}}
+{{cmn-hanzi|pin=[[fù]] ([[fu4]])|wg=fu<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偩]]
