--- a/en/偪/偪.11130.wikitext
+++ b/en/偪/偪.11130.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[bī]] (bi1)|wg=pi<sup>1</sup>}}
+{{cmn-hanzi|pin=[[bī]] ([[bi1]])|wg=pi<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偪]]
