link Hanzi tones  ([[Project:AWB|AWB]]) <偬#2498712>

--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=傯|pin=[[zǒng]] (zong3)|wg=tsung<sup>3</sup>}}
+{{cmn-hanzi|tra=傯|pin=[[zǒng]] ([[zong3]])|wg=tsung<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偬]]
