--- a/en/偭/偭.11133.wikitext
+++ b/en/偭/偭.11133.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[miǎn]] (mian3)|wg=mien<sup>3</sup>}}
+{{cmn-hanzi|pin=[[miǎn]] ([[mian3]])|wg=mien<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偭]]
