--- a/en/偯/偯.11135.wikitext
+++ b/en/偯/偯.11135.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[yǐ]] (yi3)|wg=i<sup>3</sup>}}
+{{cmn-hanzi|pin=[[yǐ]] ([[yi3]])|wg=i<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偯]]
