--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -32,7 +32,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[ǒu]] (ou3), [[zán]] (zan2)|wg=ou<sup>3</sup>, tsan<sup>2</sup>}}
+{{cmn-hanzi|pin=[[ǒu]] ([[ou3]]), [[zán]] ([[zan2]])|wg=ou<sup>3</sup>, tsan<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偶]]
