link Hanzi tones  ([[Project:AWB|AWB]]) <偿#2498761>

--- a/en/偿/偿.11151.wikitext
+++ b/en/偿/偿.11151.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=償|pin=[[cháng]] (chang2)|wg=ch'ang<sup>2</sup>}}
+{{cmn-hanzi|tra=償|pin=[[cháng]] ([[chang2]])|wg=ch'ang<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 
