link Hanzi tones  ([[Project:AWB|AWB]]) <坏#2528840>

--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -27,7 +27,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=壞|pin=[[huài]] (huai4), [[pī]] (pi1)|wg=p'i<sup>1</sup>}}
+{{cmn-hanzi|tra=壞|pin=[[huài]] ([[huai4]]), [[pī]] ([[pi1]])|wg=p'i<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
