link Hanzi tones  ([[Project:AWB|AWB]]) <块#2528856>

--- a/en/块/块.13018.wikitext
+++ b/en/块/块.13018.wikitext
@@ -22,7 +22,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=塊|pin=[[kuài]] (kuai4)|wg=k'uai<sup>4</sup>}}
+{{cmn-hanzi|tra=塊|pin=[[kuài]] ([[kuai4]])|wg=k'uai<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:块]]
