link Hanzi tones, Replaced: (jian1) → ([[jian1]])  ([[Project:AWB|AWB]]) <坚#2528869>

--- a/en/坚/坚.13021.wikitext
+++ b/en/坚/坚.13021.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=堅|pin=[[jiān]] (jian1)|wg=chien<sup>1</sup>}}
+{{cmn-hanzi|tra=堅|pin=[[jiān]] ([[jian1]])|wg=chien<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
