link Hanzi tones  ([[Project:AWB|AWB]]) <坛#2528870>

--- a/en/坛/坛.13022.wikitext
+++ b/en/坛/坛.13022.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=[[壇]], [[罈]]|pin=[[tán]] (tan2)|wg=t'an<sup>2</sup>}}
+{{cmn-hanzi|tra=[[壇]], [[罈]]|pin=[[tán]] ([[tan2]])|wg=t'an<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坛]]
