link Hanzi tones  ([[Project:AWB|AWB]]) <坝#2528886>

--- a/en/坝/坝.13024.wikitext
+++ b/en/坝/坝.13024.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=壩|pin=[[bà]] (ba4)|wg=pa<sup>4</sup>}}
+{{cmn-hanzi|tra=壩|pin=[[bà]] ([[ba4]])|wg=pa<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坝]]
