--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -186,6 +186,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 *Danish: [[smør]]
 *Dutch: [[boter]] {{f}}
 *Esperanto: [[butero]]
+*Estonian: [[või]], [[peagalööja]]
 *Finnish: [[voi]]
 *French: [[beurre]] {{m}}
 *German: [[Butter]] {{f}}
