added {{en-adv}}; copyedited <e.g.#2531160>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -9,13 +9,13 @@ eg., eg
 Abbreviation of Latin ''[[exempli gratiā]]'' ("for example"). ''Gratiā'' here is in the ablative case. Previously abbreviated to ''ex. gr.''
 
 ===Adverb===
-'''e.g.'''
-#''(abbreviation)'' literally, "for example."  Used to introduce an example or list of examples to illustrate what is being discussed.
-#:''Asia is a large continent, with many large nations (e.g., China, India and Japan).''
+{{en-adv|-}}
+#{{context|[[abbreviation]]|[[initialism]]}} Literally, "for example."  Used to introduce an [[example]] or list of examples to illustrate what is being discussed.
+#:''Asia is a large continent, with many large nations ('''e.g.''', China, India, and Japan).''
 
 ====Usage notes====
 *The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''  
-*Place ''e.g.'' between [[parentheses]] when used in written text and follow by a [[comma]] when used in its function as "for example".
+*Place ''e.g.'' between [[parentheses]] when used in written text and follow by a [[comma]] when used in its function as "for example."
 *Opinion is mixed about whether this term should be italicized and whether it should be written with a separating non-breaking space as in ''e. g.''
 
 ====Translations====
