link Hanzi tones  ([[Project:AWB|AWB]]) <垦#2536909>

--- a/en/垦/垦.13098.wikitext
+++ b/en/垦/垦.13098.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=墾|pin=[[kěn]] (ken3)|wg=k'en<sup>3</sup>}}
+{{cmn-hanzi|tra=墾|pin=[[kěn]] ([[ken3]])|wg=k'en<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垦]]
