--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -35,6 +35,7 @@
 *Korean: [[거북]] (geobuk), [[거북이]] (geobugi)
 {{mid}}
 *Lithuanian: [[vėžlys]] {{m}}
+*Macedonian: [[желка]] {{f}}
 *Norwegian: [[skilpadde]]
 *Polish: [[żółw lądowy]] {{m}}
 *Portuguese: [[tartaruga]] {{f}}
