given name <Israel#2574010>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -20,11 +20,13 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 
 # The modern nation in the [[Middle East]], located at eastern [[shore]] of the [[Mediterranean]]. Official name: State of Israel.
 # The ancient nation occupying approximately the same area, especially under the united monarchy of Saul, David and Solomon.
+# (''Biblical'') A name given to [[Jacob]] (Genesis 32:28).
+# {{given name|male}}.
 
 {{rfc-level|Translations at L3+}}
 
 ===Translations===
-{{top}}
+{{trans-top|the nation}}
 *Albanian: [[Izraeli]]
 *Arabic: {{ARchar|[[إسرائيل]]}} (’isra’íl)
 *Armenian: [[Իսրայել]] (Israyel)
@@ -50,7 +52,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 *Indonesian: Israel
 *Interlingua: Israel
 *Italian: [[Israele]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[イスラエル]] (isuraeru)
 *Livonian: [[Izraēl]], [[Jūdõmō]]
 *Macedonian: [[Израел]] {{m}}
@@ -74,7 +76,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 *Turkish: [[İsrail]]
 *Ukrainian: [[Ізраїль]] (Izrajil’) {{m}}
 *Urdu: {{URchar|[[اسرائیل]]}}
-{{bottom}}
+{{trans-bottom}}
 
 ===Related terms===
 *[[Israeli]]
@@ -83,6 +85,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 ===See also===
 *[[Countries of the world]]
 *[[w:Israel|Wikipedia article on Israel]]
+*[[Irving]]
 
 [[Category:Countries]]
 
