/* Translations */ *Czech <brick#2574840>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -20,12 +20,17 @@
 #: ''Thanks for helping me wash the car. You're a '''brick'''.''
 
 ====Translations====
+{{trans-top|hardened block used for building}}
+*Czech: [[cihla]] {{f}}
+{{trans-mid}}
+{{trans-bottom}}
+=====Translations to be checked=====
+{{checktrans}}
 {{top}}
 *Afrikaans: [[baksteen]]
 *Arabic: [[طوبة]] (ṭūbah)
 *[[Breton]]: [[brikenn]] {{f}} -où
 *Chinese: [[磚]], [[砖]]
-*Czech: [[cihla]]
 *Danish: [[mursten]] {{c}} (1,2)
 *Dutch: [[baksteen]]
 *Estonian: [[telliskivi]], [[tellis]]
