link Hanzi tones, Replaced: (yu4) → ([[yu4]])  ([[Project:AWB|AWB]]) <愈#2576501>

--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -31,7 +31,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=[[癒]], [[瘉]]|pin=[[yù]] (yu4)|wg=yü<sup>4</sup>}}
+{{cmn-hanzi|tra=[[癒]], [[瘉]]|pin=[[yù]] ([[yu4]])|wg=yü<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
