link Hanzi tones, Replaced: (yun4) → ([[yun4]])  ([[Project:AWB|AWB]]) <愠#2576660>

--- a/en/愠/愠.15667.wikitext
+++ b/en/愠/愠.15667.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=慍|pin=[[yùn]] (yun4)|wg=yün<sup>4</sup>}}
+{{cmn-hanzi|tra=慍|pin=[[yùn]] ([[yun4]])|wg=yün<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愠]]
