link Hanzi tones  ([[Project:AWB|AWB]]) <愡#2576664>

--- a/en/愡/愡.15668.wikitext
+++ b/en/愡/愡.15668.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[lèng]] (leng4), [[zǒng]] (zong3)|wg=leng<sup>4</sup>, tsung<sup>3</sup>}}
+{{cmn-hanzi|pin=[[lèng]] ([[leng4]]), [[zǒng]] ([[zong3]])|wg=leng<sup>4</sup>, tsung<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愡]]
