link Hanzi tones  ([[Project:AWB|AWB]]) <愿#2576790>

--- a/en/愿/愿.15698.wikitext
+++ b/en/愿/愿.15698.wikitext
@@ -30,7 +30,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=願|pin=[[yuàn]] (yuan4)|wg=yüan<sup>4</sup>}}
+{{cmn-hanzi|tra=願|pin=[[yuàn]] ([[yuan4]])|wg=yüan<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
