link Hanzi tones  ([[Project:AWB|AWB]]) <慑#2576862>

--- a/en/慑/慑.15717.wikitext
+++ b/en/慑/慑.15717.wikitext
@@ -16,7 +16,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=懾|pin=[[shè]] (she4)|wg=she<sup>4</sup>}}
+{{cmn-hanzi|tra=懾|pin=[[shè]] ([[she4]])|wg=she<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:慑]]
