--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -259,15 +259,20 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 *{{ttbc|Telugu}}: [[కోయు]] (kOyu) (1,2), [[తెంచు]] (teMchu)(3), [[కోత వేయు]] (kOta vEyu) (6), [[ఖండించుకొను]] (khaMDiMchukonu) (8)
 {{trans-bottom}}
 
+[[Category:Meats]]
+
+
 ----
 
 ==Kiput==
 ===Etymology===
 From Proto-North Sarawak *''likud'', from Proto-Malayo-Polynesian *''likuj''.
+
 ===Noun===
 '''cut'''
 
 # [[back]] (of the body)
+
 [[Category:Kiput nouns]]
 [[Category:kyi:Anatomy]]
 
