/* Noun */ derived <float#2596467>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -32,6 +32,13 @@ From {{ON.}} [[fljóta]].
 #:''It's true - I don't consider anything other than root-beer with vanilla ice-cream to be a "real" '''float'''.''
 # A small sum of money put in a [[cashier]]'s [[till]] at the start of business to enable [[change]] to be made.
 
+====Synonyms====
+Shares offered to the public:
+* [[initial public offering]]
+
+====Derived terms====
+*[[floatplane]]
+
 ====Translations====
 {{trans-top|buoyant device used to support something in liquid}}
 *Dutch: [[vlot]] {{n}}
@@ -73,10 +80,6 @@ From {{ON.}} [[fljóta]].
 {{trans-top|soft beverage with a scoop of vanilla ice-cream floating in it}}
 {{trans-mid}}
 {{trans-bottom}}
-
-====Synonyms====
-Shares offered to the public:
-* [[initial public offering]]
 
 ===Intransitive verb===
 {{rfc-trverb|Intransitive verb}}
