--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -114,12 +114,12 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|To attack}}
-*Finnish: [[hyökätä]], [[käydä]] [[päälle]]
+{{trans-top|(+ at) To attack}}
+*Finnish: [[hyökätä]], [[käydä]] [[päälle]]/[[kimppuun]]
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|To get one's hands on}}
+{{trans-top|(+ by) To get one's hands on}}
 {{trans-mid}}
 {{trans-bottom}}
 
