/* Noun */ + def <pen#2603167>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -21,6 +21,7 @@
 # {{baseball}} The [[bullpen]].
 #: ''Two righties are up in the '''pen'''.''
 # A female [[swan]].
+# {{zoology}} The internal [[cartilage]] skeleton of a [[squid]], shaped like a pen.
 
 ====Related terms====
 {{top2}}
@@ -78,6 +79,10 @@
 *Norwegian: [[hunnsvane]] {{m}}
 {{trans-mid}}
 *Russian: [[лебёдка]] (lebjódka) {{f}}
+{{trans-bottom}}
+
+{{trans-top|internal cartilage skeleton of a squid}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ===Verb===
