--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -73,6 +73,10 @@
 *Spanish: [[corral]] {{m}}
 {{trans-bottom}}
 
+{{trans-top|(baseball) bullpen}}
+:''see translations at'' '''[[bullpen]]'''.
+{{trans-bottom}}
+
 {{trans-top|female swan}}
 *French: [[cygne]] [[femelle]] {{m}}
 *German: [[weiblicher]] [[Schwan]] {{m}}, [[Schwänin]] {{f}} (archaic)
