link Hanzi tones  ([[Project:AWB|AWB]]) <昄#2606768>

--- a/en/昄/昄.16940.wikitext
+++ b/en/昄/昄.16940.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[bǎn]] (ban3)|wg=pan<sup>3</sup>}}
+{{cmn-hanzi|pin=[[bǎn]] ([[ban3]])|wg=pan<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昄]]
