/* Translations */ +de,es <curtain#2607057>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -14,11 +14,15 @@
 ====Translations====
 {{trans-top|piece of cloth covering a window}}
 *Czech: [[závěs]] {{m}}
+*{{de}}: [[Vorhang]] {{m}}
+*{{es}}: [[cortina]] {{f}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|piece of cloth in a theater}}
 *Czech: [[opona]] {{f}}
+*{{de}}: [[Vorhang]] {{m}}
+*{{es}}: [[cortina]] {{f}}
 {{trans-mid}}
 {{trans-bottom}}
 
