link Hanzi tones  ([[Project:AWB|AWB]]) <昬#2608263>

--- a/en/昬/昬.16980.wikitext
+++ b/en/昬/昬.16980.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[hūn]] (hun1), [[mǐn]] (min3)|wg=hun<sup>1</sup>, min<sup>3</sup>}}
+{{cmn-hanzi|pin=[[hūn]] ([[hun1]]), [[mǐn]] ([[min3]])|wg=hun<sup>1</sup>, min<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昬]]
