--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -24,6 +24,7 @@
 {{trans-top|hardened block used for building}}
 *Czech: [[cihla]] {{f}}
 {{trans-mid}}
+*Russian: [[кирпич]] (kirpíč) {{m}}
 {{trans-bottom}}
 =====Translations to be checked=====
 {{checktrans}}
@@ -47,7 +48,6 @@
 *{{ttbc|Latvian}}: [[ķieģelis]] {{m}} (1,2)
 *{{ttbc|Portuguese}}: [[tijolo]]
 *{{ttbc|Romanian}}: [[cărămidă]] {{f}}
-*{{ttbc|Russian}}: [[кирпич]] (kirpich)
 *{{ttbc|Slovene}}: [[opeka]] {{f}} (1,2)
 *{{ttbc|Spanish}}: [[ladrillo]] {{m}}
 *{{ttbc|Swahili}}: [[tofali]], [[matofali]] {{p}} (1,2) ''(noun 5/6)''
