--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -39,9 +39,11 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 #{{intransitive}} To [[move]] from further [[away]] to [[near]]er to.
 #:''She'll be '''coming''' 'round the mountain when she '''comes'''...''
 #{{intransitive}} {{slang}} {{alternative spelling of|[[cum]]}}  To [[orgasm]].
-#:''When she started '''cumming''' for the third time, she screamed out that it was her first multiple orgasm.''
+#:''He '''came''' after a few minutes.''
 #{{intransitive}} (''with an object preceded by the preposition'' [[at]]) To [[attack]].
+#:''She '''came''' at him with a knife.''
 #{{intransitive}} (''with an object preceded by the preposition'' [[by]]) To [[get]] one's hands on.
+#:''A four-leaf clover is difficult to '''come''' by.''
 
 ====Derived terms====
 {{top2}}
