/* Translations */ +sv <Czech Republic#2656692>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -43,6 +43,7 @@
 *Slovak: [[Česká republika]] {{f}}
 *Slovene: [[Češka Republika]] {{f}}
 *Spanish: la [[República Checa]] {{f}}
+*Swedish: [[Tjeckien]], [[Republiken Tjeckien]]
 *Turkish: [[Çek Cumhuriyeti]]
 *Ukrainian: [[Чеська Республіка]]
 *Võro: [[Tsehhi]], [[Tsehhi Vabariik']]
