--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -1,4 +1,4 @@
-[[Image:Jan Vermeer van Delft 003.jpg|thumb|right|250 px|Girl surrounded by curtains.]]
+[[Image:Jan Vermeer van Delft 003.jpg|thumb|Girl surrounded by curtains.]]
 ==English==
 
 ===Pronunciation===
@@ -10,7 +10,7 @@
 {{en-noun}}
 
 # A piece of [[cloth]] [[cover]]ing a [[window]] to keep the [[sun]] from shining inside.
-# A similar piece of cloth that seperates the [[audience]] and the [[stage]] in a [[theater]].
+# A similar piece of cloth that separates the [[audience]] and the [[stage]] in a [[theater]].
 
 ====Related terms====
 *[[curtain call]]
@@ -55,10 +55,10 @@
 ===Verb===
 {{en-verb}}
 
-# To cover, as if with a curtain.  
+# To cover (a window) with a curtain; to hang curtains.
 
 ====Translations====
-{{trans-top|to cover, as with a curtain}}
+{{trans-top|to cover with a curtain}}
 *Finnish: [[verhota]]
 {{trans-bottom}}
 
