header -Inflections +Inflection, fixed ----'s <mandat#2666473>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -1,4 +1,5 @@
 ==French==
+
 ===Etymology===
 From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands, to command", from Proto-Indo-European ''*man-'' "hand" + ''*dhē-'' "put".
 
@@ -13,17 +14,21 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 
 ===Noun===
 '''mandat''' ''m''
+
 # [[mandate]]
 
 [[Category:French nouns]]
 
+----
+
 ==Swedish==
+
 ===Noun===
 '''mandat'''
 
-#[[mandate]]
+# [[mandate]]
 
-====Inflections====
+====Inflection====
 {{sv-noun|gender=Neuter|mandat|mandatet|mandat|mandaten|mandats|mandatets|mandats|mandatens}}
 
 [[Category:Swedish nouns]]
